@@ -20,8 +20,9 @@ from Execute import Execute
 grammar = (
     ('escaped_data',        r'\\.'),
     ('open_curly_bracket',  '{'),
+    ('close_curly_bracket', '}'),
     ('newline',             r'\n'),
-    ('raw_data',            r'[^\r\n{}]+')
+    ('raw_data',            r'[^\r\n{}\\]+')
 )
 
 grammar_c = []
@@ -47,8 +48,8 @@ class Exscript(Scope):
                 if parser.token()[1].lstrip().startswith('#'):
                     while not parser.current_is('newline'):
                         parser.next()
-                else:
-                    buffer += parser.token()[1]
+                    continue
+                buffer += parser.token()[1]
                 parser.next()
             elif parser.current_is('escaped_data'):
                 buffer += parser.token()[1][1]
